--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@
 /ObserverDesignPattern/ObserverDesignPattern.Business/bin/Debug/net5.0
 /ObserverDesignPattern/ObserverDesignPattern.DataContract/obj
 /ObserverDesignPattern/ObserverDesignPattern.DataContract/bin/Debug/net5.0
+/AdapterDesignPattern/.vs/AdapterDesignPattern/v16
+/AdapterDesignPattern/AdapterDesignPattern/obj
+/AdapterDesignPattern/AdapterDesignPattern.Business/obj
+/AdapterDesignPattern/AdapterDesignPattern.DataContract/obj
+/AdapterDesignPattern/AdapterDesignPattern/bin/Debug/net5.0
+/AdapterDesignPattern/AdapterDesignPattern.DataContract/bin/Debug/net5.0
+/AdapterDesignPattern/AdapterDesignPattern.Business/bin/Debug/net5.0
